# mining-sim

./: CMakeLists.txt  README.md
src/: main.cpp
src/assets/: miner.cpp  station.cpp
src/inlcude/: main.h
src/inlcude/assets/: miner.h  station.h
src/inlcude/utils/: metricshandler.h  minermanager.h  stationmanager.h  tickhandler.h
src/tests/: miner_test.cpp
src/utils/: metricshandler.cpp  minermanager.cpp  stationmanager.cpp  tickhandler.cpp
